<resources>
    <string name="app_name">Recipe</string>
    <string name="action_settings">Settings</string>

    <string name="add_recipe">Add Recipe</string>
    <string name="filter">Filter</string>
    <string name="filter_category">Filter Category</string>
    <string name="category">Category</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="via">Via</string>
    <string name="camera">Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Permission require for the function to operate</string>
    <string name="dialog_permission_button_positive">Understood</string>
    <string name="confirm_to_delete">Confirm to delete?</string>
</resources>